--- a/telemetry/collector/src/main/resources/application.properties
+++ b/telemetry/collector/src/main/resources/application.properties
@@ -5,3 +5,5 @@ kafka.topic.hub=telemetry.hubs.v1
 kafka.topic.sensor=telemetry.sensors.v1
 kafka.bootstrap.server=localhost:9092
 
+grpc.server.port=9090
+
