--- a/compose.yaml
+++ b/compose.yaml
@@ -33,3 +33,18 @@ services:
                              --partitions 1 --replication-factor 1 --if-not-exists \
                              --bootstrap-server kafka:29092'"
     init: true
+
+  analyzer-db:
+      image: postgres:16.1
+      container_name: postgres-analyzer-db
+      ports:
+        - "5435:5432"
+      environment:
+        - POSTGRES_PASSWORD=analyzer
+        - POSTGRES_USER=analyzer
+        - POSTGRES_DB=analyzer
+      healthcheck:
+        test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+        timeout: 5s
+        interval: 5s
+        retries: 10
