branch develop fix after review

--- a/telemetry/analyzer/src/main/resources/application.properties
+++ b/telemetry/analyzer/src/main/resources/application.properties
@@ -4,7 +4,6 @@ kafka.topic.snapshot=telemetry.snapshots.v1
 kafka.group.id=telemetry.aggregator
 kafka.bootstrap.server=localhost:9092
 
-
 kafka.consumer.snapshot.group.id=snapshot-group
 kafka.consumer.hub.group.id=hub-group
 
@@ -16,7 +15,7 @@ grpc.client.hub-router.enableKeepAlive=true
 grpc.client.hub-router.keepAliveWithoutCalls=true
 grpc.client.hub-router.negotiationType=PLAINTEXT
 
-
+spring.kafka.consumer.enable-auto-commit=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
