--- a/telemetry/aggregator/src/main/resources/application.properties
+++ b/telemetry/aggregator/src/main/resources/application.properties
@@ -3,5 +3,6 @@ kafka.topic.sensor=telemetry.sensors.v1
 kafka.topic.snapshot=telemetry.snapshots.v1
 kafka.group.id=telemetry.aggregator
 kafka.bootstrap.server=localhost:9092
+spring.kafka.consumer.enable-auto-commit=false
 
 grpc.server.port=9096
