branch 5-config-server

--- a/telemetry/collector/src/main/resources/application.properties
+++ b/telemetry/collector/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-spring.application.name=plus-smart-home-tech
-logging.level.org.apache.kafka.*=ERROR
+#spring.application.name=plus-smart-home-tech
+#logging.level.org.apache.kafka.*=ERROR
+#
+#kafka.topic.hub=telemetry.hubs.v1
+#kafka.topic.sensor=telemetry.sensors.v1
+#kafka.bootstrap.server=localhost:9092
+#
+#grpc.server.port=59091
+#server.port=8081
+#
 
-kafka.topic.hub=telemetry.hubs.v1
-kafka.topic.sensor=telemetry.sensors.v1
-kafka.bootstrap.server=localhost:9092
-
-grpc.server.port=59091
-server.port=8081
-
+spring.application.name=collector
+spring.config.import=configserver:http://localhost:8888
+spring.cloud.config.fail-fast=true
+spring.cloud.config.retry.use-random-policy=true
+spring.cloud.config.retry.max-interval=6000
