--- a/infra/config-server/src/main/resources/config/telemetry/analyzer/application.yaml
+++ b/infra/config-server/src/main/resources/config/telemetry/analyzer/application.yaml
@@ -26,9 +26,50 @@
 #spring.datasource.username=analyzer
 #spring.datasource.password=analyzer
 
+kafka:
+  topic:
+    hub: telemetry.hubs.v1
+    sensor: telemetry.sensors.v1
+    snapshot: telemetry.snapshots.v1
+  group:
+    id: telemetry.aggregator
+  bootstrap:
+    server: localhost:9092
+  consumer:
+    snapshot:
+      group:
+        id: snapshot-group
+    hub:
+      group:
+        id: hub-group
 
-spring.application.name=analyzer
-spring.config.import=configserver:http://localhost:8888
-spring.cloud.config.fail-fast=true
-spring.cloud.config.retry.use-random-policy=true
-spring.cloud.config.retry.max-interval=6000
+grpc:
+  server:
+    port: 9095
+  client:
+    hub-router:
+      address: static://localhost:59090
+      enableKeepAlive: true
+      keepAliveWithoutCalls: true
+      negotiationType: PLAINTEXT
+
+spring:
+  kafka:
+    consumer:
+      enable-auto-commit: false
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
+    show-sql: true
+  sql:
+    init:
+      mode: always
+#spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5435/analyzer
+    username: analyzer
+    password: analyzer
