--- a/telemetry/analyzer/pom.xml
+++ b/telemetry/analyzer/pom.xml
@@ -55,12 +55,14 @@
             <artifactId>grpc-client-spring-boot-starter</artifactId>
             <version>3.1.0.RELEASE</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>ru.yandex.practicum</groupId>-->
-<!--            <artifactId>serialization</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
     </dependencies>
 
 
