--- a/telemetry/aggregator/src/main/resources/application.properties
+++ b/telemetry/aggregator/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-kafka.topic.hub=telemetry.hubs.v1
-kafka.topic.sensor=telemetry.sensors.v1
-kafka.topic.snapshot=telemetry.snapshots.v1
-kafka.group.id=telemetry.aggregator
-kafka.bootstrap.server=localhost:9092
-spring.kafka.consumer.enable-auto-commit=false
-
-grpc.server.port=9096
+spring.application.name=aggregator
+spring.config.import=configserver:http://localhost:8888
+spring.cloud.config.fail-fast=true
+spring.cloud.config.retry.use-random-policy=true
+spring.cloud.config.retry.max-interval=6000
