--- a/infra/config-server/src/main/resources/application.yaml
+++ b/infra/config-server/src/main/resources/application.yaml
@@ -12,4 +12,9 @@ spring:
             - classpath:config/telemetry/{application}
 
 server:
-  port: 8888
+  port: 0
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka
