--- a/commerce/shopping-cart/src/main/resources/application.properties
+++ b/commerce/shopping-cart/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.cloud.config.retry.use-random-policy=true
 spring.cloud.config.retry.max-interval=6000
 
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
+
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
+eureka.instance.instance-id="${spring.application.name}:${random.value}"
+eureka.instance.lease-renewal-interval-in-seconds=10
