--- a/commerce/shopping-store/src/main/resources/application.properties
+++ b/commerce/shopping-store/src/main/resources/application.properties
@@ -8,6 +8,12 @@ spring.cloud.config.retry.max-interval=6000
 
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
 
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
+eureka.instance.instance-id="${spring.application.name}:${random.value}"
+eureka.instance.lease-renewal-interval-in-seconds=10
+
+
 #eureka.client.registerWithEureka=false
 #eureka.client.fetchRegistry=false
 
