branch 9-gateway-microservices

--- a/commerce/warehouse/src/main/resources/application.properties
+++ b/commerce/warehouse/src/main/resources/application.properties
@@ -12,3 +12,5 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=localhost
 eureka.instance.instance-id="${spring.application.name}:${random.value}"
 eureka.instance.lease-renewal-interval-in-seconds=10
+
+spring.main.allow-bean-definition-overriding=true
