--- a/commerce/warehouse/pom.xml
+++ b/commerce/warehouse/pom.xml
@@ -77,6 +77,12 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>${project.mapstruct.processor.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ru.yandex.practicum</groupId>
+            <artifactId>order</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
