--- a/infra/config-server/src/main/resources/config/infra/gateway/application.yaml
+++ b/infra/config-server/src/main/resources/config/infra/gateway/application.yaml
@@ -40,3 +40,24 @@ spring:
             - Path=/warehouse/**
           filters:
             - PrefixPath=/api/v1
+
+        - id: order_service_route
+          uri: lb://order
+          predicates:
+            - Path=/order/**
+          filters:
+            - PrefixPath=/api/v1
+
+        - id: payment_service_route
+          uri: lb://payment
+          predicates:
+            - Path=/payment/**
+          filters:
+            - PrefixPath=/api/v1
+
+        - id: delivery_service_route
+          uri: lb://delivery
+          predicates:
+            - Path=/delivery/**
+          filters:
+            - PrefixPath=/api/v1
